Problem owner can provide feedback on solutions

--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -244,6 +244,10 @@
     :update: 
       :flash: 
         :successful: Solution rated
+  :solutions_feedbacks: 
+    :create: 
+      :flash: 
+        :successful: Feedback submitted
   :supervisions: 
     :new: 
       :answers: 
