Extracted rating form to partial

--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -269,6 +269,11 @@
         :yes: "Yes"
       :question: Do you want to create new Supervision Session?
       :title: New Supervision Session
+    :rating: 
+      :heading: 
+        :rating: Rating
+      :rate: 
+        :rate: Rate
   :topic_answers: 
     :create: 
       :flash: 
