Fix problems with wrong routes for users and relationships

--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -284,6 +284,7 @@
         - :edit: !omap 
             - :buttons: !omap 
                 - :update: Update
+            - :edit_title: Edit user
             - :links: !omap 
                 - :change_gravatar: change
         - :index: !omap 
