Cleanup and refactoring
 * Fix some routes, nest routes which depend on supervision
 * Unroll define_methods calls in User model
 * JSlint javascript file

All in one commit, as it all depends on other things and it would take
to much time to split and test separate commits.

--- a/config/locales/application_en.yml
+++ b/config/locales/application_en.yml
@@ -44,6 +44,7 @@
         - :chat_users: !omap 
             - :captions: !omap 
                 - :leader: Leader
+                - :problem_owner: Problem owner
             - :links: !omap 
                 - :leader: Leader
                 - :problem_owner: Problem owner
@@ -279,6 +280,7 @@
         - :new: !omap 
             - :content: !omap 
                 - :hint: Enter your problem or leave this blank if you do not have any.
+            - :submit: Submit Topic
             - :title: New Topic
     - :users: !omap 
         - :edit: !omap 
